# oneup-gb

./: .gitignore  .travis.yml  Audio.cc  Audio.hpp  Base.hpp  CMakeLists.txt  CPU.cc  CPU.hpp  Joypad.cc  Joypad.hpp  LCD.cc  LCD.hpp  LICENSE.md  LRConnector.cc  LRConnector.hpp  Loader.cc  Loader.hpp  Machine.cc  Machine.hpp  Mapper.cc  Mapper.hpp  Opcode.hpp  README.md  Regs.hpp  Serializer.cc  Serializer.hpp  Timer.cc  Timer.hpp  libretro.cc
cmake/: FindSDL2.cmake
core/: Audio.cc  Audio.hpp  Base.hpp  CMakeLists.txt  CPU.cc  CPU.hpp  Frontend.hpp  IOObserver.hpp  Joypad.cc  Joypad.hpp  LCD.cc  LCD.hpp  Loader.cc  Loader.hpp  Machine.cc  Machine.hpp  MachineObserver.hpp  Mapper.cc  Mapper.hpp  Opcode.hpp  Regs.hpp  Serializer.cc  Serializer.hpp  Timer.cc  Timer.hpp
core/audio/: Audio.cc  Audio.hpp  Channel1.cc  Channel1.hpp  Channel2.cc  Channel2.hpp  Channel3.cc  Channel3.hpp  Channel4.cc  Channel4.hpp
core/cpu/: AddrMode.hpp  CPU.cc  CPU.hpp  CPUObserver.hpp  ConditionCode.hpp  Instruction.hpp  Opcode.hpp  Operand.hpp  Optype.hpp  Regs.hpp
core/io/: IO.cc  IO.hpp  IOObserver.hpp
core/joypad/: Joypad.cc  Joypad.hpp
core/lcd/: LCD.cc  LCD.hpp
core/serial/: Serial.cc  Serial.hpp
core/timer/: Timer.cc  Timer.hpp  TimerObserver.hpp
frontend/libretro/: CMakeLists.txt  LRConnector.cc  LRConnector.hpp  libretro.cc
frontend/sdl/: CMakeLists.txt  SDLFrontend.cc  SDLFrontend.hpp  gb1_sdl.cc
test/blargg/: BlarggTester.cc  CMakeLists.txt
test/blargg/cpu_instrs/expected/: cpu_instrs.txt  cpu_instrs_01.txt  cpu_instrs_02.txt  cpu_instrs_03.txt  cpu_instrs_04.txt  cpu_instrs_05.txt  cpu_instrs_06.txt  cpu_instrs_07.txt  cpu_instrs_08.txt  cpu_instrs_09.txt  cpu_instrs_10.txt  cpu_instrs_11.txt
test/gbppunit/: CMakeLists.txt  GBPPUnitTester.cc
test/gbppunit/expected/: 001-vblank.txt  005-scyx-precise.txt  008-altbgtile.txt  009-wnd-basic.txt  010-wyx.txt  011-wyx-precise.txt  012-wnd-disable.txt  013-obj-basic.txt  014-obj-xflip.txt  015-obj-yflip.txt  016-obj-xyflip.txt  017-obj-leftpri.txt  018-obj-bgpri.txt  019-obj-wndpri.txt  020-obj-mixpri.txt  021-obj-mixpri2.txt  022-obj-palpri.txt  023-default.txt  024-obj-8x16.txt
test/gbppunit/roms/: 001-vblank.gb  002-basic.gb  003-bgmap.gb  004-scyx.gb  005-scyx-precise.gb  006-scyx-wrap.gb  007-altbgmap.gb  008-altbgtile.gb  009-wnd-basic.gb  010-wyx.gb  011-wyx-precise.gb  012-wnd-disable.gb  013-obj-basic.gb  014-obj-xflip.gb  015-obj-yflip.gb  016-obj-xyflip.gb  017-obj-leftpri.gb  018-obj-bgpri.gb  019-obj-wndpri.gb  020-obj-mixpri.gb  021-obj-mixpri2.gb  022-obj-palpri.gb  023-default.gb  024-obj-8x16.gb
util/: CMakeLists.txt  gb1_analyzer.cc  gb1_cpu_call_tree.cc  gb1_cpu_trace.cc  rom_info.py
